feat: add update and remove user
